--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "guzzlehttp/guzzle": "^7.2",
+        "getbrevo/brevo-php": "^2.0",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "php-flasher/flasher-toastr-laravel": "^1.15",
-        "sendinblue/api-v3-sdk": "^8.4"
+        "league/flysystem-local": "^3.28",
+        "php-flasher/flasher-toastr-laravel": "^1.15"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
